# miden-client

./: CHANGELOG.md  Cargo.toml
.github/workflows/: web-docs-check.yml
client/: Cargo.toml
client/src/: config.rs  errors.rs  lib.rs  main.rs  mock.rs  tests.rs
client/src/cli/: account.rs  export.rs  init.rs  mod.rs  new_transactions.rs  sync.rs  tags.rs
client/src/client/: store_authenticator.rs
client/src/client/transactions/: mod.rs  transaction_request.rs
client/src/store/note_record/: mod.rs
client/src/store/sqlite_store/: mod.rs  sync.rs  transactions.rs
crates/rust-client/: Cargo.toml
crates/rust-client/src/: tests.rs
crates/rust-client/src/authenticator/: mod.rs
crates/rust-client/src/authenticator/keystore/: fs_keystore.rs  mod.rs  web_keystore.rs
crates/rust-client/src/store/web_store/: mod.rs
crates/rust-client/src/store/web_store/account/: js_bindings.rs  mod.rs  (+1 more)
crates/rust-client/src/sync/: mod.rs
crates/rust-client/src/transaction/: mod.rs
crates/web-client/: .mocharc.json  Cargo.toml  index.html  package.json  rollup.config.js  test.html  tsconfig.json  typedoc.json
crates/web-client/js/: index.js
crates/web-client/js/types/: index.d.ts
crates/web-client/js/workers/: web-client-methods-worker.js
crates/web-client/src/: account.rs  helpers.rs  import.rs  lib.rs  new_account.rs  new_transactions.rs  sync.rs
crates/web-client/src/models/: account.rs  account_component.rs  account_storage.rs  account_storage_mode.rs  account_storage_requirements.rs  foreign_account.rs  input_notes.rs  mod.rs  provers.rs  public_key.rs  secret_key.rs  storage_map.rs  sync_summary.rs  transaction_request.rs  transaction_result.rs
crates/web-client/src/models/transaction_request/: transaction_request_builder.rs
crates/web-client/test/: README.md  account.test.ts  faucet.test.ts  fpi.test.ts  global.test.d.ts  mocha.global.setup.mjs  new_account.test.ts  new_transactions.test.ts  notes.test.ts  poc.test.ts  testUtils.js  transactions.test.ts  wallet.test.ts  webClientTestUtils.js  webClientTestUtils.ts
src/: config.rs  errors.rs  main.rs  mock.rs  tests.rs
src/cli/: account.rs  export.rs  import.rs  info.rs  init.rs  mod.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  tags.rs  transactions.rs
src/client/: accounts.rs  chain_data.rs  mod.rs  note_screener.rs  notes.rs  store_authenticator.rs  sync.rs
src/client/rpc/: mod.rs  tonic_client.rs
src/client/transactions/: mod.rs  transaction_request.rs
src/store/: data_store.rs  mod.rs
src/store/note_record/: mod.rs
src/store/sqlite_store/: accounts.rs  chain_data.rs  migrations.rs  mod.rs  notes.rs  sync.rs  transactions.rs
tests/: Cargo.toml
tests/integration/: common.rs  fpi_tests.rs  onchain_tests.rs
wasm/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js  test.html
wasm/js/: index.js
wasm/js/db/: accounts.js  chainData.js  helper.js  notes.js  schema.js  sync.js  transactions.js
wasm/js/types/: index.d.ts
wasm/src/: account.rs  lib.rs
wasm/src/native_code/: accounts.rs
wasm/src/web_client/: account.rs  export.rs  import.rs  mod.rs  new_account.rs  new_transactions.rs  notes.rs  sync.rs  tags.rs  transactions.rs
wasm/src/web_client/models/: accounts.rs  transactions.rs
wasm/src/web_client/rpc/: client_grpc.rs  mod.rs
wasm/src/web_client/rpc/domain/: accounts.rs  blocks.rs  digest.rs  merkle.rs  mod.rs  notes.rs  nullifiers.rs
wasm/src/web_client/rpc/proto/: block_header.proto  responses.proto
wasm/src/web_client/store/: mod.rs
wasm/src/web_client/store/accounts/: js_bindings.rs  mod.rs  utils.rs
wasm/src/web_client/store/chain_data/: mod.rs  utils.rs
wasm/src/web_client/store/notes/: js_bindings.rs  mod.rs  models.rs  utils.rs
wasm/src/web_client/store/sync/: js_bindings.rs  mod.rs
wasm/src/web_client/store/transactions/: js_bindings.rs  mod.rs  utils.rs
website/: next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.worker.json
website/src/app/: layout.tsx  page.tsx
website/src/app/accounts/: page.tsx
website/src/app/accounts/[accountId]/: page.tsx
website/src/app/faucets/: page.tsx
website/src/app/greet/: page.tsx
website/src/app/notes/: page.tsx
website/src/app/transactions/: page.tsx
website/src/components/: defaultLayout.tsx
website/src/components/drawer-views/: context.tsx
website/src/components/ui/: collapsible-menu.tsx  logo.tsx  scrollbar.tsx
website/src/components/ui/button/: button.tsx
website/src/components/ui/links/: active-link.tsx  anchor-link.tsx
website/src/context/: wasm-context.tsx
website/src/helpers/: account-helpers.ts
website/src/layouts/: _layout-menu.tsx  _layout.tsx
website/src/layouts/dashboard/: _dashboard.tsx  _sidebar.tsx
website/src/lib/: db.ts  wasm.ts
website/src/lib/hooks/: use-is-mounted.ts  use-state-callback.ts
website/src/lib/polygon-worker/: accounts.ts
website/src/workers/: accounts.ts
(+1 files in other folders)
