[package]
name = "miden-wasm"
version = "1.0.0"
description = "WebAssembly based toolkit for developing zero knowledge applications with Polygon Miden"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
indexmap = { version = "1.5.2", features = ["std"] }

[dependencies.gluesql]
version = "0.15"
default-features = false
features = ["idb-storage"]