[package]
name = "miden-wasm"
version = "1.0.0"
description = "WebAssembly based toolkit for developing zero knowledge applications with Polygon Miden"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-tx/concurrent"]
default = ["std"]
std = ["miden-objects/std"]
testing = ["miden-objects/testing", "miden-lib/testing"]
test_utils = ["miden-objects/testing"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4" }
miden-client = { path = "../../demox-miden-client-next", default-features = false, features = ["wasm"] }
miden-lib = { path = "../../miden-base/miden-lib", default-features = false }
miden-tx = { path = "../../miden-base/miden-tx", default-features = false }
miden-objects = { path = "../../miden-base/objects", default-features = false, features = ["serde"] }
prost = { version = "0.12.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
tonic = { version="0.11.0", default-features = false, features=["prost","codegen"] }
tonic-web-wasm-client = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }

[build-dependencies]
tonic-build = { version="0.11.0", default-features = false, features = ["prost"]}

[profile.release]
# Use dev settings for release
opt-level = 0
debug = true
rpath = false
